Fix hidden overflow of LogsComponent

--- a/frontend/src/app/settings/repository-manager-settings/repository-settings/backup-settings/ease-backup-settings/view-logs-dialog/view-logs-dialog.component.css
+++ b/frontend/src/app/settings/repository-manager-settings/repository-settings/backup-settings/ease-backup-settings/view-logs-dialog/view-logs-dialog.component.css
@@ -1,9 +1,14 @@
 .wrapper {
-  min-width: 50vw;
-  min-height: 80vh;
 }
 
 .buttons {
   display: flex;
   justify-content: right;
+}
+
+.content {
+  overflow-y: scroll;
+  min-width: 50vw;
+  min-height: 50vh;
+  max-height: 80vh;
 }
